@@ -1235,7 +1235,7 @@ public class ConfigurationBean implements Serializable {
     public boolean isSubthemeDiscriminatorFieldSet() {
         return StringUtils.isNotEmpty(DataManager.getInstance().getConfiguration().getSubthemeDiscriminatorField());
     }
-    
+
     /**
      * 
      * @return a boolean.
@@ -1371,14 +1371,6 @@ public class ConfigurationBean implements Serializable {
      */
     public boolean isDisplayAddressSearchInMap() {
         return DataManager.getInstance().getConfiguration().isDisplayAddressSearchInMap();
-    }
-
-    /**
-     * 
-     * @return Configured value
-     */
-    public boolean isArchivesEnabled() {
-        return DataManager.getInstance().getConfiguration().isArchivesEnabled();
     }
 
     /**
@@ -1550,7 +1542,7 @@ public class ConfigurationBean implements Serializable {
             List<LabeledValue> translatedValues = entry.getValue()
                     .stream()
                     .map(v -> new LabeledValue(v.getValue(), ViewerResourceBundle.getTranslation(v.getLabel(), locale), v.getStyleClass()))
-                    .collect(Collectors.toList());
+                    .toList();
             translatedMap.put(entry.getKey(), translatedValues);
 
         }
@@ -1563,7 +1555,7 @@ public class ConfigurationBean implements Serializable {
                 .getGeomapFeatureTitleOptions()
                 .stream()
                 .map(item -> new SelectItem(item.getValue(), ViewerResourceBundle.getTranslation(item.getLabel(), BeanUtils.getLocale())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Metadata> getMetadataConfiguration(String type) {
